--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,10 @@ spring:
     url: ${DB_URL}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
+  mvc:
+    view:
+      prefix: /WEB-INF/views/
+      suffix: .jsp
 
   jpa:
     hibernate:
