--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,10 @@ dependencies {
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
+
+    // Spring Security core
+    implementation 'org.springframework.security:spring-security-core' // 사용 중인 Spring Boot 버전에 맞게 설정
+
 }
 
 tasks.named('test') {
