perf : 칵테일 추천 기능에 chat-GPT api 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,3 +48,9 @@ springdoc:
   writer-with-default-pretty-printer: true # JSON을 예쁘게 출력
 #  paths-to-match:
 #    - /api/v1/** # 특정 경로의 API만 매칭
+
+openai:
+  model: ${MODEL}
+  api:
+    key: ${API_KEY}
+    url: ${API_URL}
