--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,12 @@ spring:
       prefix: /WEB-INF/views/
       suffix: .jsp
 
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
+    check-template-location: true
+    cache: false
+
   jpa:
     hibernate:
       ddl-auto: update
