feat: frontend thymeleaf를 통해 바인딩(그래프 제외)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -60,3 +60,9 @@ openai:
   api:
     key: ${API_KEY}
     url: ${API_URL}
+
+logging:
+  level:
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql: TRACE
+    org.hibernate.orm.jdbc.bind: TRACE
