feat: 로그인->마이페이지

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    //implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
@@ -49,6 +50,9 @@ dependencies {
 
     // format JSON
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+
+//    // MappingJackson2HttpMessageConverter
+//    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.2'
 
 
 }
